fixed alignment

--- a/personal-website/src/components/Header.css
+++ b/personal-website/src/components/Header.css
@@ -3,5 +3,6 @@
     margin:0;
     margin:auto;
     top: 10;
+    vertical-align: middle;
 }
 
